--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_riverpod: ^3.0.3
   maplibre_gl: ^0.24.0
   flutter_dotenv: ^5.1.0
+  http: ^1.5.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
