--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,11 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^3.0.3
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  geolocator: ^14.0.2
   maplibre_gl: ^0.24.0
   flutter_dotenv: ^5.1.0
   http: ^1.5.0
-  geolocator: ^14.0.2
+  permission_handler: ^11.0.0
+  image_picker: ^1.2.0
+  exif: ^3.0.2
+  collection: ^1.19.1
+  material_symbols_icons: ^4.2874.0
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +64,6 @@ dev_dependencies:
 flutter:
   assets:
     - .env
-    - assets/marker.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
