--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   exif: ^3.0.2
   collection: ^1.19.1
   material_symbols_icons: ^4.2874.0
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
