--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,10 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_riverpod: ^3.0.3
-  maplibre_gl: ^0.24.0
+  # cupertino_icons: ^1.0.8
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
+  url_launcher: ^6.3.2
   flutter_dotenv: ^5.1.0
+  http: ^1.5.0
+  flutter_riverpod: ^3.0.3
 
 dev_dependencies:
   flutter_test:
