--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   http: ^1.5.0
   flutter_riverpod: ^3.0.3
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
