--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  # cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.8
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
   url_launcher: ^6.3.2
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.5.0
   flutter_riverpod: ^3.0.3
   collection: ^1.19.1
+  flutter_map_compass: ^1.0.0
 
 dev_dependencies:
   flutter_test:
