--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   flutter_riverpod: ^3.0.3
   collection: ^1.19.1
   flutter_map_compass: ^1.0.0
+  image_picker: ^1.2.0
+  exif: ^3.0.2
+  material_symbols_icons: ^4.2874.0
 
 dev_dependencies:
   flutter_test:
