--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_riverpod: ^3.0.3
   collection: ^1.19.1
   flutter_map_compass: ^1.0.0
+  flutter_map_location_marker: ^10.1.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
