WIP: layer switcher

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   image_picker: ^1.2.0
   exif: ^3.0.2
   material_symbols_icons: ^4.2874.0
+  vector_map_tiles: ^9.0.0-beta.8
 
 dev_dependencies:
   flutter_test:
