feat(fe): add protomaps

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   exif: ^3.0.2
   material_symbols_icons: ^4.2874.0
   vector_map_tiles: ^9.0.0-beta.8
+  vector_tile_renderer: ^6.0.0
+  pmtiles: ^1.3.0
 
 dev_dependencies:
   flutter_test:
