--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   exif: ^3.0.2
   material_symbols_icons: ^4.2874.0
   vector_map_tiles: ^9.0.0-beta.8
-  vector_tile_renderer: ^6.0.0
-  pmtiles: ^1.3.0
+  vector_map_tiles_pmtiles:
+    git:
+      url: https://github.com/josxha/flutter_map_plugins.git
+      path: vector_map_tiles_pmtiles
 
 dev_dependencies:
   flutter_test:
