--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   exif: ^3.0.2
   material_symbols_icons: ^4.2874.0
   vector_map_tiles: ^9.0.0-beta.8
+  material_design_icons_flutter: ^7.0.7296
 
 dev_dependencies:
   flutter_test:
