--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -28,24 +28,21 @@ dependencies:
   intl: any
 
   cupertino_icons: ^1.0.8
-  flutter_map: ^8.2.2
+  maplibre_gl: ^0.24.1
   latlong2: ^0.9.1
-  url_launcher: ^6.3.2
   flutter_dotenv: ^6.0.0
   http: ^1.5.0
   flutter_riverpod: ^3.0.3
   collection: ^1.19.1
-  flutter_map_compass: ^1.0.0
-  flutter_map_location_marker: ^10.1.0
   geolocator: ^14.0.2
   app_settings: ^6.1.1
   image_picker: ^1.2.0
   exif: ^3.0.2
   material_symbols_icons: ^4.2874.0
-  vector_map_tiles: ^9.0.0-beta.8
   material_design_icons_flutter: ^7.0.7296
   skeletonizer: ^2.1.0+1
   cached_network_image: ^3.4.1
+  flutter_map: ^8.2.2
 
 dev_dependencies:
   flutter_test:
