--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   skeletonizer: ^2.1.0+1
   cached_network_image: ^3.4.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
