--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   maplibre_gl: ^0.24.1
   http: ^1.5.0
+  dio: ^5.7.0
   flutter_riverpod: ^3.0.3
   collection: ^1.19.1
   geolocator: ^14.0.2
